<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="7dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/showDetailsHeader"
            android:fontFamily="@font/btn_fonts"
            android:gravity="center"
            android:minHeight="40dp"
            android:text="@string/details_header"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/background_light" />

        <TextView
            android:id="@+id/details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/btn_fonts"
            android:gravity="center|start"
            android:minHeight="40dp"
            android:text="@string/details_title"
            android:textSize="16sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/details_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/btn_fonts"
            android:gravity="center|start"
            android:minHeight="40dp"
            android:text="@string/details_author"
            android:textSize="16sp" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/details_author_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/btn_fonts"
            android:gravity="center|start"
            android:minHeight="40dp"
            android:text="@string/details_author_id"
            android:textSize="16sp" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/details_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/btn_fonts"
            android:gravity="center|start"
            android:minHeight="40dp"
            android:text="@string/details_tags"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>