<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PhototDetails">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        app:cardBackgroundColor="#777171"
        app:cardCornerRadius="4dp">

        <ScrollView
            android:layout_width="match_parent"
            android:scrollbars="none"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_details_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/show_full_image"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/placeholder" />

                <View
                    android:id="@+id/divider5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:paddingStart="3dp"
                    android:paddingEnd="3dp" />

                <TextView
                    android:id="@+id/title_details_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:fontFamily="@font/btn_fonts"
                    android:text="@string/details_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/divider6"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:paddingStart="3dp"
                    android:paddingEnd="3dp" />

                <TextView
                    android:id="@+id/tags_details_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:fontFamily="@font/btn_fonts"
                    android:text="@string/details_tags"
                    android:textSize="18sp" />
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>